--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,11 @@ before_deploy:
   - lein jar
   - lein deploy releases
 #deploy:
-#  provider: releases
-#  api_key: "${GH_TOKEN}"
-#  file_glob: true
-#  file: $TRAVIS_BUILD_DIR/target/*.jar
-#  skip_cleanup: true
-#  overwrite: true
-#  on:
-#    tags: true
+  provider: releases
+  api_key: "${GH_TOKEN}"
+  file_glob: true
+  file: $TRAVIS_BUILD_DIR/target/*.jar
+  skip_cleanup: true
+  overwrite: true
+  on:
+    tags: true
